syntax = "proto3";

package mystira.chain.v1;

option csharp_namespace = "Mystira.Chain.V1";

import "mystira/chain/v1/ip_assets.proto";
import "mystira/chain/v1/royalties.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

// ChainService provides blockchain integration operations via Story Protocol
// This service is implemented by Mystira.Chain (Python) and consumed by Mystira.App (.NET)
service ChainService {
  // ============================================
  // IP Asset Registration
  // ============================================

  // Register a story/content as an IP Asset on Story Protocol
  rpc RegisterIpAsset(RegisterIpAssetRequest) returns (RegisterIpAssetResponse);

  // Check if content is already registered
  rpc IsRegistered(IsRegisteredRequest) returns (IsRegisteredResponse);

  // Get the current status of an IP Asset registration
  rpc GetIpAssetStatus(GetIpAssetStatusRequest) returns (IpAssetStatusResponse);

  // Batch register multiple IP Assets (client streaming)
  rpc BatchRegisterIpAssets(stream RegisterIpAssetRequest) returns (BatchRegisterResponse);

  // ============================================
  // Royalty Management
  // ============================================

  // Get royalty configuration for an IP Asset
  rpc GetRoyaltyConfiguration(GetRoyaltyConfigurationRequest) returns (RoyaltyConfigurationResponse);

  // Update royalty splits for an IP Asset
  rpc UpdateRoyaltySplit(UpdateRoyaltySplitRequest) returns (UpdateRoyaltySplitResponse);

  // Pay royalties to an IP Asset's contributors
  rpc PayRoyalties(PayRoyaltiesRequest) returns (PayRoyaltiesResponse);

  // Get claimable royalty balance for a wallet
  rpc GetClaimableRoyalties(GetClaimableRoyaltiesRequest) returns (ClaimableRoyaltiesResponse);

  // Claim royalties for a wallet
  rpc ClaimRoyalties(ClaimRoyaltiesRequest) returns (ClaimRoyaltiesResponse);

  // ============================================
  // Transaction Monitoring (Streaming)
  // ============================================

  // Stream transaction status updates (server streaming)
  rpc WatchTransactions(WatchTransactionsRequest) returns (stream TransactionUpdate);

  // ============================================
  // Health & Diagnostics
  // ============================================

  // Health check
  rpc HealthCheck(google.protobuf.Empty) returns (HealthCheckResponse);

  // Get service version and capabilities
  rpc GetServiceInfo(google.protobuf.Empty) returns (ServiceInfoResponse);
}

// Health check response
message HealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
  }
  ServingStatus status = 1;
  string version = 2;
  google.protobuf.Timestamp timestamp = 3;
  // Additional health details
  map<string, string> details = 4;
}

// Service info response
message ServiceInfoResponse {
  string service_name = 1;
  string version = 2;
  string network = 3;  // e.g., "sepolia", "mainnet"
  string rpc_endpoint = 4;
  repeated string supported_operations = 5;
  map<string, string> contract_addresses = 6;
}
